Set version in json.config.
