# onchain-ruby/lib/onchain/models/onchain_balance_reply.rb
@@ -12,21 +12,37 @@ Swagger Codegen version: 2.4.13-SNAPSHOT
 
 require 'date'
 
-module SwaggerClient
-  class OnchainAddressReply
-    attr_accessor :network_address
+module Onchain
+  class OnchainBalanceReply
+    attr_accessor :usd_balance
+
+    attr_accessor :balance
+
+    attr_accessor :unconfirmed_balance
+
+    attr_accessor :human_balance
+
+    attr_accessor :human_unconfirmed_balance
 
     # Attribute mapping from ruby-style variable name to JSON key.
     def self.attribute_map
       {
-        :'network_address' => :'network_address'
+        :'usd_balance' => :'usd_balance',
+        :'balance' => :'balance',
+        :'unconfirmed_balance' => :'unconfirmed_balance',
+        :'human_balance' => :'human_balance',
+        :'human_unconfirmed_balance' => :'human_unconfirmed_balance'
       }
     end
 
     # Attribute type mapping.
     def self.swagger_types
       {
-        :'network_address' => :'String'
+        :'usd_balance' => :'Float',
+        :'balance' => :'String',
+        :'unconfirmed_balance' => :'String',
+        :'human_balance' => :'Float',
+        :'human_unconfirmed_balance' => :'Float'
       }
     end
 
@@ -38,8 +54,24 @@ module SwaggerClient
       # convert string to symbol for hash key
       attributes = attributes.each_with_object({}) { |(k, v), h| h[k.to_sym] = v }
 
-      if attributes.has_key?(:'network_address')
-        self.network_address = attributes[:'network_address']
+      if attributes.has_key?(:'usd_balance')
+        self.usd_balance = attributes[:'usd_balance']
+      end
+
+      if attributes.has_key?(:'balance')
+        self.balance = attributes[:'balance']
+      end
+
+      if attributes.has_key?(:'unconfirmed_balance')
+        self.unconfirmed_balance = attributes[:'unconfirmed_balance']
+      end
+
+      if attributes.has_key?(:'human_balance')
+        self.human_balance = attributes[:'human_balance']
+      end
+
+      if attributes.has_key?(:'human_unconfirmed_balance')
+        self.human_unconfirmed_balance = attributes[:'human_unconfirmed_balance']
       end
     end
 
@@ -61,7 +93,11 @@ module SwaggerClient
     def ==(o)
       return true if self.equal?(o)
       self.class == o.class &&
-          network_address == o.network_address
+          usd_balance == o.usd_balance &&
+          balance == o.balance &&
+          unconfirmed_balance == o.unconfirmed_balance &&
+          human_balance == o.human_balance &&
+          human_unconfirmed_balance == o.human_unconfirmed_balance
     end
 
     # @see the `==` method
@@ -73,7 +109,7 @@ module SwaggerClient
     # Calculates hash code according to all attributes.
     # @return [Fixnum] Hash code
     def hash
-      [network_address].hash
+      [usd_balance, balance, unconfirmed_balance, human_balance, human_unconfirmed_balance].hash
     end
 
     # Builds the object from hash
@@ -133,7 +169,7 @@ module SwaggerClient
           end
         end
       else # model
-        temp_model = SwaggerClient.const_get(type).new
+        temp_model = Onchain.const_get(type).new
         temp_model.build_from_hash(value)
       end
     end
